--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
   "name": "rightnow-tile",
-  "version": "0.1.0",
-  "private": true,
+  "version": "2.0.0",
+  "description": "CUDA to cuTile Python transpiler for NVIDIA Blackwell GPUs",
+  "keywords": ["cuda", "cutile", "nvidia", "blackwell", "gpu", "transpiler", "compiler"],
+  "author": "RightNow AI",
+  "license": "MIT",
+  "homepage": "https://tile.rightnowai.co",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/RightNow-AI/RightNow-Tile"
+  },
+  "bugs": {
+    "url": "https://github.com/RightNow-AI/RightNow-Tile/issues"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,18 +20,25 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
+    "framer-motion": "^12.23.25",
+    "lucide-react": "^0.556.0",
     "next": "16.0.8",
+    "next-themes": "^0.4.6",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "web-tree-sitter": "^0.25.10"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.22",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
